# IITM

./: Dockerfile  README.md  email.json  index.py  push_space.py  q-vercel-latency.json  requirements.txt  streak.py
.devcontainer/: devcontainer.json
BDM/: analyze_datasets.py  (+2 more)
workspace/: pyproject.toml  streak.py
workspace/GA1/: README.md  compress_attempt.py  compute_count.py  q-calculate-variance.json  sentiment_test.py  unicode.py
workspace/GA1/monthly_sales/: q-multi-cursor-json.txt  sales.json
workspace/GA1/q-compare-files/: a.txt  b.txt
workspace/GA1/q-replace-across-files/: file0.txt  file1.txt  file2.txt  file3.txt  file4.txt  file5.txt  file6.txt  file7.txt  file8.txt  file9.txt
workspace/GA1/q-unicode-data/: data1.csv  data2.csv  data3.txt
workspace/GA2/: Dockerfile  README.md  build_and_run.py  main-1.py  q-vercel-latency.json  requirements.txt
workspace/GA2/docker_push/: README.md  push_image.sh
workspace/GA2/google-oidc/: README.md  main.py
workspace/GA3/bio-quiz-app/: README.md  index.html
workspace/GA3/bio-quiz-app/css/: styles.css
workspace/GA3/bio-quiz-app/data/: questions.json
workspace/GA3/bio-quiz-app/js/: app.js
workspace/GA3/fastapi_agent/: README.md  main.py
workspace/GA3/fastapi_agent/agent_bin/: copilot_cli.py
workspace/GA3/jules/: prime.py  streak.py
workspace/google-oidc/: test.py
workspace/q-fastapi-service/: README.md  main.py  q-fastapi.csv
workspace/week4/: package.json
workspace/week4/q4/: invoice_processing.json
workspace/week4/q6/: similarity_score.py
workspace/week4/q7/: most_similar.py
(+35 files in other folders)
