[project]
name = "tds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.118.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "httpx>=0.28.1",
    "huggingface-hub>=0.35.3",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "statistics>=1.0.3.5",
    "uvicorn>=0.37.0",
]
